--- a/ARQCP/US03/Makefile
+++ b/ARQCP/US03/Makefile
@@ -1,5 +1,5 @@
-exUS03: main.o asm.o
-	gcc -g main.o asm.o -o exUS03
+usac03: main.o asm.o
+	gcc -g main.o asm.o -o usac03
 
 main.o: main.c
 	gcc -g -Wall -c main.c -o main.o
@@ -8,10 +8,10 @@ asm.o: asm.s
 	gcc -g -Wall -c asm.s -o asm.o
 
 clean:
-	rm -f *.o exUS03
+	rm -f *.o usac03
 
-run: exUS03
-	./exUS03
+run: usac03
+	./usac03
 
-debug: exUS03
-	gdb -tui ./exUS03
+debug: usac03
+	gdb -tui ./usac03
