--- a/SRC/source/main/resources/application.properties
+++ b/SRC/source/main/resources/application.properties
@@ -1,4 +1,4 @@
-database.url=jdbc:oracle:thin:@vsgate-s1.dei.isep.ipp.pt:11133/xe
-database.user=g081
-database.password=bddad
+database.url=jdbc:oracle:thin:@vsgate-s1.dei.isep.ipp.pt:10647/xe
+database.user=user1
+database.password=oracle
 database.inet=vsgate-s1.dei.isep.ipp.pt
